2007-07-18  Michael Smith <msmith@fluendo.com>

	* flumotion/manager/depgraph.py:
	  Add some comments, simplify a bit of code.

2007-07-18  Michael Smith <msmith@fluendo.com>

	* flumotion/test/test_manager_depgraph.py:
	* flumotion/test/test_manager_manager.py:
	  Fix up testsuite for depgraph changes.

2007-07-18  Michael Smith <msmith@fluendo.com>

	* flumotion/manager/depgraph.py:
	  Remove Feeder, Eater classes, which are unused.
	  Make state dict contain a callable as well as a boolean for each DAG
	  node. 
	  All methods that add a node now get passed a callable as well.
	  Remove whatShouldBeStarted entirely.
	  On _setState(True), call appropriate down-graph callables, if we
	  can.
	  All actions needed by the depgraph are now directly driven from the
	  depgraph code.
	* flumotion/manager/component.py:
	  Remove tryWhatCanBeStarted. Split the individual things out into
	  separate methods. These are used as callables in the depgraph now.
	* flumotion/manager/manager.py:
	  Changes for depgraph API additions.

	  Fixes #691.

2007-07-12  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/feedcomponent010.py:
	  Break up a translatable string so we reuse an existing one.

2007-07-12  Thomas Vander Stichele  <thomas at apestaart dot org>

	* po/POTFILES.in:
	  Add feedcomponent010.py which contains translatable strings.

2007-07-12  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/admin/gtk/client.py:
	  Translatable strings with more than one variable need to be done
	  with a dict so translators can change ordering of strings.
	  Clean up some > 80 character lines.
	  Fix instances of "Failed to Stop component"

2007-07-12  Thomas Vander Stichele  <thomas at apestaart dot org>

	* data/glade/greeter-start_new_error.glade:
	* data/glade/greeter-start_new_success.glade:
	  Set visible to False.  This fixes the "two small windows are
	  popping up when flumotion-admin starts" problem.  I have no idea